warnings fixed for all handlers